# hub-automation-example

./: .gitignore  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  run_local.sh
.circleci/: config.yml
bot/: __init__.py  pythonbot_example.py
example-model/: .dlint.yaml  .gitignore  daml.yaml
example-model/daml/: Setup.daml  User.daml
java/: Makefile  README.md  pom.xml  run_local.sh
java/src/main/java/examples/automation/: Main.java  PqsHttpServer.java  PqsJdbcConnection.java  Processor.java
java/src/main/java/examples/automation/codegen/da/internal/template/: Archive.java
java/src/main/java/examples/automation/codegen/da/types/: Tuple2.java
java/src/main/java/examples/automation/codegen/user/: Acknowledge.java  Alias.java  Change.java  Follow.java  Notification.java  User.java
java/src/main/java/examples/javabot/: Main.java  Processor.java
java/src/main/java/examples/javabot/codegen/da/internal/template/: Archive.java
java/src/main/java/examples/javabot/codegen/da/types/: Tuple2.java
java/src/main/java/examples/javabot/codegen/main/: JavabotRequest.java  JavabotRequest_Accept.java  JavabotResponse.java  PythonbotRequest.java  PythonbotResponse.java  Pythonbot_Accept.java  TriggerRequest.java  TriggerResponse.java  Trigger_Accept.java
java/src/main/java/examples/javabot/codegen/user/: Acknowledge.java  Alias.java  Change.java  Follow.java  Notification.java  User.java
java/src/main/resources/: logback.xml
python/: README.md  pyproject.toml  run_local.sh
python/bot/: pythonbot_example.py
