[tool.poetry]
name = "hub-pythonbot-example"
version = "0.1.0"
description = ""
authors = ["Brian Healey <brian.healey@digitalasset.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dazl = "^7.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

